k8s/apps/default/filebrowser/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
      app.kubernetes.io/instance: filebrowser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser
        app.kubernetes.io/instance: filebrowser
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 3005
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [3005]
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: filebrowser
          image: docker.io/filebrowser/filebrowser:v2.63.22@sha256:827fd9c7ecfd60f672c3b057be595283ac4930f64661a686e67d1dda00b6a108
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: filebrowser
        - name: data
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/arr
