k8s/apps/default/filebrowser/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  selector:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/instance: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
